<resources>
    <string name="app_name">Blood Donation</string>

    <string name="default_notification_channel_id">1001</string>

    <string name="login_activity_label">Get Started</string>
    <string name="userinfo_activity_label">Donor Registration</string>
    <string name="help_activity_label">Help</string>

    <!-- Shared Preference Name -->
    <string name="shared_preference_db">com.saeefmd.official.blood_donation</string>

    <!-- Log In Fragment -->
    <string name="hint_email">E-mail</string>
    <string name="hint_password">Password</string>
    <string name="log_in_bt">Sign In</string>
    <string name="new_here">Do not have an account?</string>
    <string name="register">Sign Up</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="guest_login">Guest Sign In</string>

    <!-- Sign Up Fragment -->
    <string name="get_started_text">Get Started..!</string>
    <string name="sign_up_bt">Sign Up</string>
    <string name="hint_confirm_password">Confirm Password</string>
    <string name="hint_phone">Mobile</string>
    <string name="sign_up_info">A verification email will be sent to your email. Click on the link to verify your account.</string>

    <!-- Password Reset Fragment -->
    <string name="reset_bt_text">Reset</string>
    <string name="insert_reset_email">Insert your E-mail below. Password reset link will be sent to your E-mail.</string>

    <!-- UserInfo Activity -->
    <string name="info_mobile">Mobile Number</string>
    <string name="info_first_name">Name</string>
    <string name="info_last_name">Last Name*</string>
    <string name="info_gender">Gender</string>
    <string name="info_email">E-mail</string>
    <string name="info_age">Age</string>
    <string name="button_continue">Continue</string>
    <string name="last_donate_date">Last Donate Date</string>

    <string name="info_department">Department</string>
    <string name="info_blood_group">Blood Group</string>

    <string name="info_location">Location</string>

    <string name="search_button">Search</string>
    <string name="filter_text">Select Blood Group &#38; Location for Better Search Result</string>

    <string name="search_blood_group">Blood Group</string>
    <string name="search_location">Location</string>
    <string name="search_departments">Department (Optional)</string>

    <string name="save_text">Save</string>

    <!-- Blood Result Activity -->
    <string name="no_result_text">No Result! </string>
    <string name="reason_text_1">1. Check if you have active internet connection</string>
    <string name="reason_text_2">2. If you have active internet connection but still no donor is appearing that means
                                    there is no registered donor of your required blood group in your preferable area.
                                    Try searching changing the location.</string>
    <string name="menu_item_about">About</string>

    <!-- Help Activity -->
    <string name="about_text">About</string>
    <string name="about_details_1">This app is basically for the students of Manarat International University.
                                    The main goal is to help each other if any one is in search of blood.</string>
    <string name="about_details_2">All the user data are stored under Google Firebase security protocol.</string>
    <string name="about_details_3">The more user registers the better the app will become on serving its main purpose.</string>
    <string name="about_details_4">This app does not contain any advertisement.</string>
    <string name="about_details_5">If you want to change your information or use a different e-mail, re-install the application
                                    or clear the application data.</string>

    <string name="contact_developer">CONTACT DEVELOPER</string>
    <string name="dev_name">Saeef MD Zulker Naeen</string>
    <string name="dev_department">Department of CSE</string>
    <string name="dev_varsity">Manarat International University</string>
    <string name="dev_mail">Email : saeefmd.1435@gmail.com</string>

    <!-- Profile Activity -->

    <string name="update_info">Update Info</string>
    <string name="my_info">My Info</string>
    <string name="search_direction_text">Please select your required Blood Group and preferred Location
                                        and then click on Search Button</string>

    <!-- User Info Activity -->
    <string-array name="array_gender">
        <item>Select</item>
        <item>Male</item>
        <item>Female</item>
        <item>Other</item>
    </string-array>
    <string-array name="array_blood_groups">
        <item>Select</item>
        <item>A+</item>
        <item>A-</item>
        <item>B+</item>
        <item>B-</item>
        <item>O+</item>
        <item>O-</item>
        <item>AB+</item>
        <item>AB-</item>
    </string-array>
    <string-array name="array_locations">
        <item>Select</item>
        <item>Badda</item>
        <item>Banani</item>
        <item>Bangshal</item>
        <item>Baridhara</item>
        <item>Basabo</item>
        <item>Bashundhara</item>
        <item>Cantonment</item>
        <item>Chaukbazar</item>
        <item>Demra</item>
        <item>Dhanmondi</item>
        <item>Dhamrai</item>
        <item>Dohar</item>
        <item>Farmgate</item>
        <item>Gulshan</item>
        <item>Hazaribagh</item>
        <item>Jatrabari</item>
        <item>Kamrangirchar</item>
        <item>Kafrul</item>
        <item>Keraniganj</item>
        <item>Khilkhet</item>
        <item>Khilgaon</item>
        <item>Kotwali</item>
        <item>Lalbag</item>
        <item>Malibag</item>
        <item>Mohakhali</item>
        <item>Mohammadpur</item>
        <item>Motijheel</item>
        <item>Mirpur</item>
        <item>Nawabganj</item>
        <item>New Market</item>
        <item>Paltan</item>
        <item>Purbachal</item>
        <item>Ramna</item>
        <item>Rampura</item>
        <item>Savar</item>
        <item>Shahbag</item>
        <item>Sutrapur</item>
        <item>Tejgaon</item>
        <item>Tongi</item>
        <item>Uttara</item>
        <item>Wari</item>

    </string-array>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <!-- quotes_array and authors_array are synchronised together. Serial must not be broken -->
    <string-array name="quotes_array">

        <item>Politeness is the flower of humanity.</item>
        <item>Be the reason someone smiles. Be the reason someone feels loved and believes in the goodness in people.</item>
        <item>We are very, very small, but we are profoundly capable of very, very big things.</item>
        <item>We make a living by what we get. We make a life by what we give.</item>
        <item>We are all connected. When one arm or foot is poisoned, the whole body becomes infected.</item>
        <item>Love life and life will love you back. Love people and they will love you back.</item>
        <item>Everyone thinks of changing the world, but no one thinks of changing himself.</item>
        <item>The sole meaning of life is to serve humanity.</item>
        <item>Great thoughts speak only to the thoughtful mind, but great actions speak to all mankind.</item>
        <item>The world will not be destroyed by those who do evil, but by those who watch them without doing anything.</item>
        <item>Our human compassion binds us the one to the other – not in pity or patronizingly but as human beings who have learnt how to turn our common suffering into hope for the future.</item>
        <item>We may have different religions, different languages, different colored skin, but we all belong to one human race. We all share the same basic values.</item>
        <item>The simplest way to be happy is to do good.</item>
        <item>Whoever saves one life, saves the world entire.</item>
        <item>We have to do the best we are capable of. This is our sacred human responsibility.</item>
        <item>Moral courage is the highest expression of humanity.</item>
        <item>There is no higher religion than human service. To work for the common good is the greatest creed.</item>
        <item>I decided it is better to scream. Silence is the real crime against humanity.</item>
        <item>We can not help everyone, but everyone can help someone.</item>

    </string-array>

    <string-array name="authors_array">
        <item>- Joseph Joubert</item>
        <item>- Roy T. Bennett</item>
        <item>- Stephen Hawking</item>
        <item>- Winston Churchill</item>
        <item>- Suzy Kassem</item>
        <item>- Arthur Rubinstein</item>
        <item>- Leo Tolstoy</item>
        <item>- Leo Tolstoy</item>
        <item>- Theodore Roosevelt</item>
        <item>- Albert Einstein</item>
        <item>- Nelson Mandela</item>
        <item>- Kofi Annan</item>
        <item>- Helen Keller</item>
        <item>- Thomas Keneally</item>
        <item>- Albert Einstein</item>
        <item>- Ralph Nader</item>
        <item>- Woodrow Wilson</item>
        <item>- Nadezhda Mandelstam</item>
        <item>- Ronald Reagan</item>

    </string-array>

    <!-- My Info Alert Dialog -->
    <string name="my_info_update_bt">Update</string>
    <string name="my_info_ok_bt">Got It</string>
    <string name="my_info_cancel_bt">Cancel</string>
    <string name="my_info_save_bt">Save</string>
    <string name="are_u_sure">Are you sure?</string>

    <string name="custom_please_wait">Please Wait</string>

    <!-- Developer Info -->
    <string name="developer_contact">Contact Developer</string>
    <string name="developer_name">Saeef Md Zulker Naeen</string>
    <string name="developer_mail">E-mail: saeefmd.1435@gmail.com</string>
    <string name="developer_designation">Android Developer</string>
    <string name="developer_company">Mindscape Limited</string>
    <string name="donation_chart_button">Donation Chart</string>
    <string name="donation_factors_button">Donation factors</string>

</resources>
